--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "sass": "^1.56.1",
     "tailwindcss": "^3.2.4"
   }
 }
